--- a/html_template/index.html
+++ b/html_template/index.html
@@ -105,12 +105,12 @@
   <div class="splash">
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6">
           <div class="header">
-            what's your favorite color?
+            What's your favorite color?
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6">
           <div class="row">
             <div class="box yellow"></div>
             <div class="box orange"></div>
