--- a/html_template/index.html
+++ b/html_template/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -106,79 +106,33 @@
   <div class="splash">
     <div class="container d-flex">
       <div class="row align-items-center">
-          <div class="row">
-              <div class="col-lg-6 ">
-                  <div class="header">
-                      What's your favorite color?
-                  </div>
-              </div>
-              <!--
-    <div class="col-lg-6">
-      <div class="row">
-        <div class="box yellow"></div>
-        <div class="box orange"></div>
-        <div class="box red"></div>
-      </div>
-      <div class="row">
-        <div class="box pink"></div>
-        <div class="box purple"></div>
-        <div class="box blue"></div>
-      </div>
-      <div class="row">
-        <div class="box cyan"></div>
-        <div class="box green"></div>
-        <div class="box gray"></div>
-      </div>
-      <div class="row">
-        <div class="box black"></div>
-        <div class="box white"></div>
-        <div class="box gray"></div>
-      </div>
-    </div>
-            -->
-              <div class="col-lg-2">
-                  <div class="row">
-                      <div class="box yellow"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box pink"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box cyan"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box black"></div>
-                  </div>
-              </div>
-              <div class="col-lg-2">
-                  <div class="row">
-                      <div class="box orange"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box purple"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box green"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box white"></div>
-                  </div>
-              </div>
-              <div class="col-lg-2">
-                  <div class="row">
-                      <div class="box red"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box blue"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box gray"></div>
-                  </div>
-                  <div class="row">
-                      <div class="box gray"></div>
-                  </div>
-              </div>
+        <div class="col-lg-6 ">
+          <div class="header">
+            What's your favorite color?
           </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="box yellow"></div>
+            <div class="box orange"></div>
+            <div class="box red"></div>
+          </div>
+          <div class="row">
+            <div class="box pink"></div>
+            <div class="box purple"></div>
+            <div class="box blue"></div>
+          </div>
+          <div class="row">
+            <div class="box cyan"></div>
+            <div class="box green"></div>
+            <div class="box gray"></div>
+          </div>
+          <div class="row">
+            <div class="box black"></div>
+            <div class="box white"></div>
+            <div class="box gray"></div>
+          </div>
+        </div>
       </div>
 
     </div>
