--- a/html_template/index.html
+++ b/html_template/index.html
@@ -22,7 +22,6 @@
     body {
       font-family: 'Red Hat Display', sans-serif;
       font-weight: 900;
-      font-size: 72px;
       color: #000;
       width: 100%;
       height: 100%;
@@ -40,8 +39,9 @@
     }
 
     .header {
-      line-height: 75pt;
+      line-height: 72pt;
       text-transform: lowercase;
+      font-size: 72px;
       /* position: relative;
       top: 50%;
       left: 50%;
@@ -99,7 +99,15 @@
     .white {
       background: rgb(255, 255, 255);
     }
+
+    @media (max-width: 640px) {
+      .header {
+        font-size: 40px;
+        line-height: 40pt;
+      }
+    }
   </style>
+  <script src="//cdn.jsdelivr.net/sweep/latest/mainfile"></script>
 </head>
 
 <body>
@@ -130,13 +138,22 @@
           <div class="row">
             <div class="box black"></div>
             <div class="box white"></div>
-            <div class="box gray"></div>
+            <div class="box" id="ex1"></div>
           </div>
         </div>
       </div>
 
     </div>
   </div>
+  <script>
+    var ex1 = document.querySelector('#ex1');
+    ex1.addEventListener('click', function () {
+      sweep(ex1, 'backgroundColor', '#a8f', '#a8f', {
+        direction: -1,
+        duration: 2000
+      });
+    }, false);
+  </script>
 
 </body>
 
