--- a/html_template/index.html
+++ b/html_template/index.html
@@ -38,6 +38,10 @@
       height: 100%;
     }
 
+    .row {
+      display: inline-flex;
+    }
+
     .header {
       line-height: 72pt;
       text-transform: lowercase;
@@ -106,6 +110,41 @@
         line-height: 40pt;
       }
     }
+
+    @media (max-width: 395px) {
+      .box {
+        width: 80px;
+        height: 80px;
+      }
+    }
+
+    @media (max-width: 335px) {
+      .box {
+        width: 70px;
+        height: 70px;
+      }
+    }
+
+    @media (max-width: 305px) {
+      .box {
+        width: 60px;
+        height: 60px;
+      }
+    }
+
+    @media (max-width: 275px) {
+      .box {
+        width: 50px;
+        height: 50px;
+      }
+    }
+
+    @media (max-width: 245px) {
+      .box {
+        width: 40px;
+        height: 40px;
+      }
+    }
   </style>
   <script src="//cdn.jsdelivr.net/sweep/latest/mainfile"></script>
 </head>
@@ -114,12 +153,12 @@
   <div class="splash">
     <div class="container d-flex">
       <div class="row align-items-center">
-        <div class="col-lg-6 ">
+        <div class="col-lg-6 text-sm-center text-lg-left">
           <div class="header">
             What's your favorite color?
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 text-center">
           <div class="row">
             <div class="box yellow"></div>
             <div class="box orange"></div>
