--- a/html_template/index.html
+++ b/html_template/index.html
@@ -147,6 +147,8 @@
     }
   </style>
   <script src="//cdn.jsdelivr.net/sweep/latest/mainfile"></script>
+  <script src="https://unpkg.com/popper.js@1"></script>
+  <script src="https://unpkg.com/tippy.js@5"></script>
 </head>
 
 <body>
@@ -186,6 +188,18 @@
   </div>
   <script>
     var custom = document.getElementsByClassName('custom')[0];
+    var boxes = document.getElementsByClassName('box');
+    var colorNames = ["yellow", "orange", "red", "pink", "purple", "blue", "light blue", "green", "gray", "black",
+      "white", "custom"
+    ];
+
+    var i;
+    for (i = 0; i < colorNames.length; i++) {
+      tippy(boxes[i], {
+        content: colorNames[i],
+      });
+    }
+
 
     function loop() {
       sweep(custom, 'backgroundColor', '#a8f', '#a8f', {
