--- a/html_template/index.html
+++ b/html_template/index.html
@@ -8,7 +8,7 @@
   <title>fav color tester</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:900|Red+Hat+Text&display=swap" rel="stylesheet">
   <style>
     *,
     *:after,
@@ -20,7 +20,7 @@
     }
 
     body {
-      font-family: 'Red Hat Display', sans-serif;
+      font-family: 'Red Hat Text', 'Red Hat Display', sans-serif;
       color: #000;
       width: 100%;
       height: 100%;
@@ -42,14 +42,11 @@
     }
 
     .header {
+      font-family: 'Red Hat Display', 'Red Hat Text', sans-serif;
       line-height: 72pt;
       text-transform: lowercase;
       font-size: 72px;
       font-weight: 900;
-      /* position: relative;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); */
     }
 
     .box {
