--- a/html_template/index.html
+++ b/html_template/index.html
@@ -66,7 +66,7 @@
     }
 
     .red {
-      background: rgb(245, 46, 54);
+      background: rgb(235, 31, 38);
     }
 
     .pink {
@@ -176,7 +176,7 @@
           <div class="row">
             <div class="box black"></div>
             <div class="box white"></div>
-            <div class="box custom" id="ex1"></div>
+            <div class="box custom"></div>
           </div>
         </div>
       </div>
@@ -194,15 +194,16 @@
     for (i = 0; i < colorNames.length; i++) {
       tippy(boxes[i], {
         content: colorNames[i],
+        duration: 75,
       });
     }
 
 
     function loop() {
-      sweep(custom, 'backgroundColor', '#a8f', '#a8f', {
+      sweep(custom, 'backgroundColor', '#eb1f26', '#eb1f26', {
         callback: loop,
         direction: -1,
-        duration: 5000
+        duration: 6000
       });
       // console.log('looping');
     }
