--- a/html_template/index.html
+++ b/html_template/index.html
@@ -52,7 +52,7 @@
     .box {
       width: 100px;
       height: 100px;
-      border-radius: 41px;
+      border-radius: 41%;
       margin: 1rem;
       box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
     }
