Change color wipe

--- a/html_template/index.html
+++ b/html_template/index.html
@@ -200,7 +200,7 @@
 
 
     function loop() {
-      sweep(custom, 'backgroundColor', '#eb1f26', '#eb1f26', {
+      sweep(custom, 'backgroundColor', '#a8f', '#a8f', {
         callback: loop,
         direction: -1,
         duration: 6000
