Fix custom color tooltip

--- a/html_template/index.html
+++ b/html_template/index.html
@@ -152,7 +152,7 @@
     var custom = document.getElementsByClassName('custom')[0];
 
     var i;
-    for (i = 0; i < COLORS.length; i++) {
+    for (i = 0; i < COLOR_NAMES.length; i++) {
       tippy(boxes[i], {
         content: COLOR_NAMES[i],
         duration: 75,
