--- a/html_template/index.html
+++ b/html_template/index.html
@@ -55,6 +55,14 @@
       border-radius: 41%;
       margin: 1rem;
       box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+      transition: 0.3s;
+    }
+
+    .box:hover {
+      width: 110px;
+      height: 110px;
+      box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.17);
+      cursor: pointer;
     }
 
     @media (max-width: 640px) {
@@ -164,7 +172,7 @@
       sweep(custom, 'backgroundColor', '#a8f', '#a8f', {
         callback: loop,
         direction: -1,
-        duration: 6000
+        duration: 8000
       });
       // console.log('looping');
     }
